fixed some overlap on smaller devices

--- a/src/css/containers.scss
+++ b/src/css/containers.scss
@@ -26,8 +26,9 @@
 }
 
 .about-card-container{
-   height: 100vh;
+   min-height: 100vh;
    position: relative;
+   margin-bottom: 50px;
 }
 
 .project-card-container{
